# MyPlayer

./: .gitignore  MyPlayer.sln  readme.md  打包流程.md
MyPlayer/: BottomWidget.cpp  BottomWidget.h  CacheDownloader.cpp  CacheDownloader.h  ClickLabel.h  ClickableSlider.h  CommentEnum.cpp  CommentEnum.h  LyricAnalyzer.cpp  LyricAnalyzer.h  MainWidget.cpp  MainWidget.h  MiddleWidgetRightBase.cpp  MiddleWidgetRightBase.h  MusicInfoData.h  MusicInfoManager.cpp  MusicInfoManager.h  MusicListItemDelegate.cpp  MusicListItemDelegate.h  MusicListManager.cpp  MusicListManager.h  MusicLoader.cpp  MusicLoader.h  MusicPlayListItemDelegate.cpp  MusicPlayListItemDelegate.h  MusicPlayer.cpp  MusicPlayer.h  MusicPlayerList.cpp  MusicPlayerList.h  MusicPlayerWidget.cpp  MusicPlayerWidget.h  MusicPlayer_temp.cpp  MusicPlayer_temp.h  MyPlayer.vcxproj  MyPlayer.vcxproj.filters  PlayListWidget.cpp  PlayListWidget.h  SelectionFileWidget.cpp  SelectionFileWidget.h  WorkerThread.h  (+10 more)
如果想用cmake构建，这是参考/: CMakeLists.txt  cmake.bat  readme.md
